# lazy-sets-rs

./: Cargo.toml  README.md
examples/: convex_hull.rs  polytope.rs
lazyreachpy/: Cargo.toml  pyproject.toml
lazyreachpy/src/: lib.rs
lazyreachpy/src/numpyffi/: convert.rs  mod.rs
src/: lib.rs
src/convex/: halfspace.rs  mod.rs  singleton.rs  sphere.rs  traits.rs
src/lazy_operation/: hull.rs  minkowski.rs  mod.rs  transform.rs
src/operation/: hull.rs  minkowski.rs  mod.rs  transform.rs
src/overapproximate/: mod.rs
